<?xml version="1.0"?>
<package>
  <name>rmp_msgs</name>
  <version>0.0.2</version>
  <description>
    The rmp_msgs package defines rmp specific messages such as motor status, audio command, ...
  </description>
  <maintainer email="thomas.decandia@sri.com">Thomas de Candia</maintainer>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
